tests/error/type_match/base_case_const_to_non_const_auto_ref.bz
// error: unable to match lvalue expression of type 'const int32' to a non-const auto reference '#int32'
function test()
{
	let ci: const int32 = 0;
	let _: #int32 = ci;
}
